--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
                 <p class="testymonials">TESTYMONIALS</p>
                 <div class="box-1">
                     <p class="name"> Kathryn Murphy</p>
-                    <p class="comment">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+                    <p class="comment">Lorem Ipsum is simply AAAAAAAdummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
                     <img src="../img/Estrelasstar.png" alt="notas-de-avaliação" class="img-comment">
                 </div>
                 <div class="box-2">
