--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css" />
-    <title>BearBears 2</title>
+    <title>BearBears</title>
 </head>
 
 <body>
