home page e services

--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,17 @@
           alt="Bear Bears logo."
         />
       </section>
+      <section class="services-page">
+        <div class="services-title">
+          <h1>SERVICES</h1>
+        </div>
+        <div class="services-image">
+          <img src="../img/servicesimage.png" alt="" />
+        </div>
+        <div class="services-button">
+          <a class="help-me-button" href="">Help Me</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
