--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,8 @@
           alt="Bear Bears logo."
         />
       </section>
+
+
       <section class="services-page">
         <div class="services-title">
           <h1>SERVICES</h1>
@@ -47,6 +49,101 @@
           <a class="help-me-button" href="">Help Me</a>
         </div>
       </section>
+
+       <!--Third-page-->
+       <section>
+        <div class="third-page">
+          <p class="testymonials">TESTYMONIALS</p>
+          <div class="box-1">
+            <p class="name">Kathryn Murphy</p>
+            <p class="comment">
+              Lorem Ipsum is simply AAAAAAAdummy text of the printing and
+              typesetting industry. Lorem Ipsum has been the industry's standard
+              dummy text ever since the 1500s, when an unknown printer took a
+              galley of type and scrambled
+            </p>
+            <img
+              src="../img/Estrelasstar.png"
+              alt="notas-de-avaliação"
+              class="img-comment"
+            />
+          </div>
+          <div class="box-2">
+            <p class="name">Kathryn Murphy</p>
+            <p class="comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled
+            </p>
+            <img
+              src="../img/Estrelasstar.png"
+              alt="notas-de-avaliação"
+              class="img-comment"
+            />
+          </div>
+          <div class="box-3">
+            <p class="name">Kathryn Murphy</p>
+            <p class="comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled
+            </p>
+            <img
+              src="../img/Estrelasstar.png"
+              alt="notas-de-avaliação"
+              class="img-comment"
+            />
+          </div>
+          <div class="box-4">
+            <p class="name">Kathryn Murphy</p>
+            <p class="comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled
+            </p>
+            <img
+              src="../img/Estrelasstar.png"
+              alt="notas-de-avaliação"
+              class="img-comment"
+            />
+          </div>
+          <button class="button-3">Help Me</button>
+        </div>
+      </section>
+
+      <!--Fourth-page-->
+      <section>
+        <div class="contact-container">
+          <p class="contat">CONTACT US</p>
+          <input type="text" class="input-1" />
+          <input type="text" class="input-2" />
+          <input type="text" class="input-3" />
+          <button class="button-enviar">ENVIAR</button>
+          <p class="email">test@gmail.com</p>
+          <img
+            src="../img/email-svgrepo-com.svg"
+            alt="email-icon"
+            class="email-icon"
+          />
+          <p class="phone">(303) 555-0105</p>
+          <img
+            src="../img/phone-call-phone-svgrepo-com.svg"
+            alt="phone-icon"
+            class="phone-icon"
+          />
+          <p class="adress">2715 Ash Dr. San Jose, South Dakota 83475</p>
+          <img
+            src="../img/map-marker-svgrepo-com.svg"
+            alt="marker-icon"
+            class="marker-icon"
+          />
+        </div>
+      </section>
+      <footer class="footer"></footer>
+
     </main>
   </body>
 </html>
