--- a/html/index.html
+++ b/html/index.html
@@ -51,8 +51,8 @@
       </section>
 
        <!--Third-page-->
-       <section>
-        <div class="third-page">
+       <section class="third-page">
+        <div>
           <p class="testymonials">TESTYMONIALS</p>
           <div class="box-1">
             <p class="name">Kathryn Murphy</p>
